tdf#160301 import DOCVARIABLE fields as user fields

DOCVARIBLE fields in *.doc files are imported as user fields.

Change-Id: Ib723d8a586ca644e0b158f839caef33b2b6225a0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165096
Tested-by: Jenkins
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
(cherry picked from commit ad4b72a0eacf6bb6887236ea3a3807b1264de822)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165721